--- a/_config.yml
+++ b/_config.yml
@@ -105,10 +105,10 @@ analytics:
 
 # Site Author
 author:
-  name: "Nick Hand"
+  name: "TAnalyXI"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Director of Finance, Data, and Policy, Philadelphia Controller"
-  location: "Philadelphia"
+  bio: "Designed by Fan Shi, Xiaoran Wang and Xinyi Miao"
+  location: "New York City"
   email:
   links:
     - label: "Email"
