--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   name: "TAnalyXI"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio: "Designed by Fan Shi, Xiaoran Wang and Xinyi Miao"
-  location: "New York City"
+  location: "For New York City"
   email:
   links:
     - label: "Email"
