--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,15 @@ minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale: "en-US"
-title: "Final Project for MUSA620"
+title: "TAnalysXi"
 title_separator: "-"
-name: "TAnalysXi"
-description: "An user-friendly analysis system for taxi."
+name: "An user-friendly analysis system for taxi data."
+description: "Final Project for MUSA620"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo: "/assets/images/logo.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute: 200
