--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 # Site Author
 author:
   name: "Designed by Fan Shi, 
-  Xiaoran Wang
+  Xiaoran Wang\n
   and Xinyi Miao"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio: "An user-friendly analysis system for taxi data."
