--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 
 # Site Author
 author:
-  name: "Designed by Xiaoran Wang, Fan Shi and Xinyi Miao."
+  name: "Designed by Xinyi Miao, Xiaoran Wang and Fan Shi."
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio: "An user-friendly analysis system for taxi data."
   location: "For New York City"
